# coach

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  package-lock.json  package.json  refactor.md  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.kodo/: architect-notes.md  config.json  linux-test-report.md  run-status.md  test-coverage.md  test-report.md  tester-notes.md  worker_fast-notes.md  worker_smart-notes.md
benchmark/: README.md  away_permission_auto_approved.json  away_permission_auto_approved.md  away_stop_blocks_with_priorities.json  away_stop_blocks_with_priorities.md  away_stop_cooldown_passes_second.json  away_stop_cooldown_passes_second.md  llm_agent_asks_instead_of_acting.json  llm_agent_asks_instead_of_acting.jsonl  llm_agent_asks_instead_of_acting.md  llm_agent_completes_task.json  llm_agent_completes_task.jsonl  llm_agent_completes_task.md  llm_agent_gives_up_early.json  llm_agent_gives_up_early.jsonl  llm_agent_gives_up_early.md  llm_agent_scaffolds_project.json  llm_agent_scaffolds_project.jsonl  llm_agent_scaffolds_project.md  rule_current_model_no_flag.json  rule_current_model_no_flag.md  rule_outdated_model_in_edit.json  rule_outdated_model_in_edit.md  rule_outdated_model_in_write.json  rule_outdated_model_in_write.md
coach-core/: Cargo.toml
coach-core/prompts/: coach_system.txt  name_session_system.txt  observer_event.txt  stop_oneshot.txt
coach-core/src/: cli.rs  coach.rs  lib.rs  llm.rs  llm_log.rs  pid_resolver.rs  prompts.rs  replay.rs  scanner.rs  server.rs  services.rs
coach-core/src/server/: api.rs  claude.rs  codex.rs  cursor.rs  events.rs  observer.rs  rules.rs
coach-core/src/settings/: hooks.rs  mod.rs
coach-core/src/state/: mod.rs  snapshot.rs
coach-core/tests/: benchmark_suite.rs  hook_integration.rs  scenario_replay.rs
docs/: ARCHITECTURE.md  SESSION_TRACKING.md
scripts/: bump-version.sh  replay_session.py
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.pycoach.json
src-tauri/binaries/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: coach_system.txt  name_session_user.txt  stop_chained.txt
src-tauri/scripts/: build_pycoach_sidecar.py
src-tauri/src/: cli.rs  commands.rs  lib.rs  llm.rs  logging.rs  main.rs  path_install.rs  pid_resolver.rs  prompts.rs  pycoach.rs  replay.rs  rules.rs  scanner.rs  server.rs  settings.rs  state.rs  tray.rs
src-tauri/src/server/: api.rs  cursor.rs
src-tauri/src/settings/: hooks.rs  mod.rs
src-tauri/src/state/: mod.rs  snapshot.rs
src-tauri/tests/: cli_integration.rs  hook_integration.rs  pycoach_sidecar.rs  scenario_replay.rs
src/components/: ActivityBar.test.ts  ActivityBar.tsx  ActivityLog.tsx  CursorIcon.tsx  DevPane.tsx  HooksPane.tsx  OwlIcon.tsx  PriorityList.tsx  SessionDetail.tsx  SessionList.test.ts  SessionList.tsx  SettingsPane.test.ts  SettingsPane.tsx  ThemeToggle.tsx  TopBar.tsx
src/hooks/: useZoom.ts
src/store/: useCoachStore.ts
src/utils/: path.test.ts  path.ts  time.ts
tests/: README.md  USER_STORIES.md  test_ui_smoke.py
