[package]
name = "coach-core"
version = "0.1.42"
edition = "2021"

[features]
default = []
pycoach = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json"] }
rig-core = { version = "0.34", default-features = false, features = ["reqwest", "rustls"] }
schemars = "1"
netstat2 = "0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
