[package]
name = "coach"
version = "0.1.30"
edition = "2021"

[lib]
name = "coach_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

reqwest = { version = "0.12", features = ["json"] }
rig-core = { version = "0.34", default-features = false, features = ["reqwest", "rustls"] }
schemars = "1"
tauri-plugin-single-instance = "2.4.1"
netstat2 = "0.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
