[package]
name = "coach"
version = "0.1.53"
edition = "2021"

[lib]
name = "coach_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
pycoach = ["coach-core/pycoach"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
coach-core = { path = "../coach-core" }
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-single-instance = "2.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
